Implemented successful kickstart.
Seemingly fixed asyncio (non-fatal) error with python 3.7 (instead of 3.8)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\david\\.virtualenvs\\distributed-messaging-jMLVeIcj\\Scripts\\python.exe",
-    "editor.defaultFormatter": "ms-python.python"
+    "editor.defaultFormatter": "ms-python.python",
+    "python.pythonPath": "C:\\Users\\david\\.virtualenvs\\distributed-messaging-jMLVeIcj\\Scripts\\python.exe"
 }
