Fixed algorithm inconsistency, cleaned up
Wrong handling of initiating marker, simulation for-looped and tested 10 workers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "python",
             "request": "launch",
             "module": "main",
-            "console": "integratedTerminal",
+            "console": "internalConsole",
             "cwd": "${workspaceFolder}/src"
         }
     ]
